--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(202, 129, 19) rgb(243, 245, 124);
+}
+
+*::-webkit-scrollbar {
+    width: 18px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: rgb(243, 245, 122);
+}
+
+*::-webkit-scrollbar-thumb {
+    background: rgb(226, 161, 64);
+    border-radius: 20px;
+    border: 3px solid rgb(243, 245, 124);
+}
+
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 30px;
@@ -23,10 +42,6 @@ body, h1, h2, h3, p {
     height: 110vh;
 }
 
-/*.congratulation .positioner {
-    margin-bottom: 110px;
-}*/
-
 .congratulation-img {
     margin: 25px 0;
     height: 700px;
@@ -47,8 +62,12 @@ body, h1, h2, h3, p {
     display: none;
 }
 
+video {
+    margin-top: 25px;
+}
+
 .congratulation {
-    background-color: rgb(243, 245, 124);
+    background-color: rgb(243, 245, 122);
 }
 
 .videos-header {
@@ -60,13 +79,14 @@ body, h1, h2, h3, p {
 }
 
 .video:nth-of-type(2) {
-    background-color: rgb(58, 139, 26);
+    background-color: rgb(64, 155, 28);
 }
 
 .video:nth-of-type(3) {
-    background-color: rgb(36, 83, 18)
+    background-color: rgb(46, 116, 17);
 }
 
-video {
-    background-color: aquamarine;
+.gradient {
+    height: 100px;
+    background: linear-gradient(0deg, rgb(179, 252, 150), rgb(243, 245, 124));
 }
